# rust-cm

./: .clippy.toml  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  README.md  UX_IMPROVEMENT_PLAN.md  dev_plan.md  install-desktop.sh  release_notes.md  rustfmt.toml
.github/workflows/: ci.yml  flathub-update.yml  flatpak.yml  obs-publish.yml  release.yml  snap.yml
.kiro/docs/: refactoring-plan.md
.kiro/hooks/: rust-lint-on-save.kiro.hook
.kiro/specs/keepass-integration/: design.md  requirements.md  tasks.md
.kiro/specs/native-protocol-embedding/: design.md  requirements.md  tasks.md
.kiro/specs/rustconn/: design.md  requirements.md  tasks.md
.kiro/specs/rustconn-bugfixes/: design.md  requirements.md  tasks.md
.kiro/specs/rustconn-enhancements/: design.md  requirements.md  tasks.md
.kiro/steering/: commit-checklist.md  product.md  release-checklist.md  structure.md  tech.md
debian/: cargo_config  changelog  control  copyright  rules
docs/: ARCHITECTURE.md  GTK4_UPGRADE.md  INSTALL.md  USER_GUIDE.md
packaging/flathub/: README.md  flathub.json  io.github.totoshko88.RustConn.yml  org.rustconn.RustConn.yml
packaging/flatpak/: io.github.totoshko88.RustConn.yml
packaging/obs/: AppImageBuilder.yml  README.md  _meta  _multibuild  _service  debian.changelog  debian.control  debian.copyright  debian.dsc  debian.rules  rustconn.changes  rustconn.dsc  rustconn.spec
powers/rustconn-dev/: POWER.md
rustconn/: Cargo.toml
rustconn-cli/: Cargo.toml
rustconn-cli/src/: main.rs
rustconn-core/: Cargo.toml
rustconn-core/benches/: search_bench.rs
rustconn-core/rustconn/: Cargo.toml
rustconn-core/rustconn/src/: app.rs  main.rs  sidebar.rs  terminal.rs  window.rs
rustconn-core/rustconn/src/dialogs/: connection.rs  import.rs  mod.rs  settings.rs  snippet.rs
rustconn-core/src/: check_structs.rs  dialog_utils.rs  error.rs  lib.rs  models.rs  password_generator.rs  progress.rs  split_view.rs  terminal_themes.rs
rustconn-core/src/config/: manager.rs  mod.rs  settings.rs
rustconn-core/src/connection/: manager.rs  mod.rs
rustconn-core/src/export/: mobaxterm.rs  mod.rs  royalts.rs  ssh_config.rs
rustconn-core/src/ffi/: mod.rs  rdp.rs  spice.rs  vnc.rs
rustconn-core/src/import/: ansible.rs  asbru.rs  mobaxterm.rs  mod.rs  rdm.rs  remmina.rs  royalts.rs  ssh_config.rs  traits.rs
rustconn-core/src/models/: connection.rs  credentials.rs  group.rs  history.rs  protocol.rs  snippet.rs  template.rs
rustconn-core/src/protocol/: detection.rs  icons.rs  mod.rs  rdp.rs  registry.rs  spice.rs  ssh.rs  vnc.rs
rustconn-core/src/rdp_client/: audio.rs  client.rs  clipboard.rs  config.rs  dir_watcher.rs  event.rs  input.rs  mod.rs  rdpdr.rs
rustconn-core/src/rdp_client/client/: commands.rs  connection.rs  mod.rs  session.rs
rustconn-core/src/search/: mod.rs
rustconn-core/src/secret/: backend.rs  detection.rs  kdbx.rs  keepassxc.rs  libsecret.rs  manager.rs  mod.rs  resolver.rs  status.rs
rustconn-core/src/session/: logger.rs  manager.rs  mod.rs  session.rs
rustconn-core/src/snippet/: manager.rs  mod.rs
rustconn-core/src/spice_client/: client.rs
rustconn-core/src/ssh_agent/: mod.rs
rustconn-core/src/vnc_client/: client.rs  event.rs
rustconn-core/tests/: property_tests.rs
rustconn-core/tests/fixtures/: mod.rs
rustconn-core/tests/integration/: importer_tests.rs  mod.rs
rustconn-core/tests/properties/: async_credential_tests.rs  config_tests.proptest-regressions  config_tests.rs  connection_tests.rs  detection_tests.proptest-regressions  detection_tests.rs  dialog_tests.proptest-regressions  dialog_tests.rs  ffi_tests.rs  history_tests.rs  import_tests.proptest-regressions  import_tests.rs  keepass_tests.rs  mod.rs  progress_tests.rs  protocol_tests.proptest-regressions  protocol_tests.rs  rdp_client_tests.rs  search_tests.rs  security_tests.rs  selection_tests.rs  serialization_tests.rs  session_restore_tests.rs  session_tests.rs  snippet_tests.proptest-regressions  snippet_tests.rs  split_view_tests.rs  ssh_agent_tests.rs  storage_backend_tests.rs
rustconn/assets/: io.github.totoshko88.RustConn.desktop  io.github.totoshko88.RustConn.metainfo.xml  org.rustconn.RustConn.desktop  org.rustconn.RustConn.metainfo.xml
rustconn/src/: adaptive_tabs.rs  alert.rs  app.rs  audio.rs  automation.rs  dashboard.rs  display.rs  embedded.rs  embedded_rdp.rs  embedded_rdp_buffer.rs  embedded_rdp_detect.rs  embedded_rdp_launcher.rs  embedded_rdp_thread.rs  embedded_rdp_types.rs  embedded_rdp_ui.rs  embedded_spice.rs  embedded_trait.rs  embedded_vnc.rs  embedded_vnc_types.rs  embedded_vnc_ui.rs  empty_state.rs  error_display.rs  external_window.rs  floating_controls.rs  main.rs  sidebar.rs  sidebar_types.rs  sidebar_ui.rs  split_view.rs  state.rs  terminal.rs  toast.rs  tray.rs  utils.rs  validation.rs  wayland_surface.rs  window.rs  window_clusters.rs  window_connection_dialogs.rs  window_document_actions.rs  (+11 more)
rustconn/src/dialogs/: adw_dialogs.rs  cluster.rs  connection.rs  document.rs  export.rs  history.rs  import.rs  log_viewer.rs  mod.rs  password.rs  password_generator.rs  progress.rs  settings.rs  settings_old.rs  shortcuts.rs  snippet.rs  statistics.rs  template.rs  terminal_search.rs  variables.rs
rustconn/src/dialogs/settings/: clients_tab.rs  logging_tab.rs  mod.rs  secrets_tab.rs  ssh_agent_tab.rs  terminal_tab.rs  ui_tab.rs
rustconn/src/session/: mod.rs  rdp.rs  spice.rs  vnc.rs
rustconn/src/terminal/: config.rs  mod.rs  tabs.rs  types.rs
scripts/: add-flathub-exception.sh  update-obs.sh
snap/: snapcraft.yaml
