[package]
name = "rustconn-core"
description = "Core library for RustConn connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
argon2 = { workspace = true }
hostname = "0.4"
# Tracing for structured logging and performance profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pure Rust VNC client for embedded VNC sessions
vnc-rs = { version = "0.5", optional = true }
# Native SPICE client for embedded SPICE sessions
spice-client = { version = "0.2.0", optional = true }
# Pure Rust RDP client for embedded RDP sessions using IronRDP (crates.io)
# Using same versions as rdw project to avoid sspi/rand_core conflicts
# native-tls instead of rustls to match rdw approach
# Features: cliprdr (clipboard), rdpdr (shared folders), dvc (dynamic channels),
# displaycontrol (dynamic resolution), rdpsnd (audio)
ironrdp = { version = "0.13", features = [
    "connector", "session", "graphics", "pdu", "core", "svc",
    "cliprdr",        # Clipboard redirection
    "rdpdr",          # Device/drive redirection (shared folders)
    "dvc",            # Dynamic Virtual Channels
    "displaycontrol", # Dynamic resolution changes (MS-RDPEDISP)
    "rdpsnd",         # Audio redirection
], optional = true }
ironrdp-tokio = { version = "0.7", features = ["reqwest"], optional = true }
ironrdp-tls = { version = "0.1.4", features = ["native-tls"], optional = true }
# Pin picky to avoid sspi compilation error with rc.20
picky = "=7.0.0-rc.17"
# Note: ironrdp-rdpdr-native 0.4 requires ironrdp-rdpdr 0.4.x but ironrdp 0.11 uses 0.3.x
# We'll implement our own simple RDPDR backend instead
# Note: ironrdp-rdpdr-native 0.4 requires ironrdp-rdpdr 0.4.x but ironrdp 0.11 uses 0.3.x
# We'll implement our own simple RDPDR backend instead

[features]
default = ["vnc-embedded", "rdp-embedded"]
vnc-embedded = ["dep:vnc-rs"]
# rdp-embedded feature enables the RdpClient struct with IronRDP
rdp-embedded = [
    "dep:ironrdp",
    "dep:ironrdp-tokio",
    "dep:ironrdp-tls",
]
# spice-embedded feature enables the SpiceClient struct with native SPICE protocol
spice-embedded = ["dep:spice-client"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[lints]
workspace = true
