[package]
name = "rustconn"
description = "Modern connection manager for Linux with GTK4 GUI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core" }
tokio = { workspace = true }
gtk4 = { workspace = true, features = ["v4_12"] }
vte4 = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
chrono = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
