[package]
name = "rustconn"
description = "Modern connection manager for Linux with GTK4 GUI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core" }
tokio = { workspace = true }
gtk4 = { workspace = true, features = ["v4_14"] }
gdk4-wayland = { version = "0.10", optional = true }
vte4 = { workspace = true, features = ["v0_72"] }
uuid = { workspace = true }
regex = "1.10"
chrono = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
open = "5"
dirs = { workspace = true }
# Tray icon support via StatusNotifierItem D-Bus protocol
# Requires libdbus-1-dev on Ubuntu/Debian or dbus-devel on Fedora
ksni = { version = "0.3", features = ["blocking"], optional = true }
# SVG rendering for tray icon (renders SVG to ARGB32 pixmap)
resvg = { version = "0.45", optional = true }
# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Audio playback for RDP embedded mode
cpal = { version = "0.17", optional = true }

[features]
default = ["tray", "vnc-embedded", "rdp-embedded", "rdp-audio", "wayland-native"]
tray = ["dep:ksni", "dep:resvg"]
vnc-embedded = ["rustconn-core/vnc-embedded"]
rdp-embedded = ["rustconn-core/rdp-embedded"]
rdp-audio = ["rdp-embedded", "dep:cpal"]
spice-embedded = ["rustconn-core/spice-embedded"]
wayland-native = ["dep:gdk4-wayland"]

[lints]
workspace = true
